--- a/home.html
+++ b/home.html
@@ -70,27 +70,33 @@
 
     <!-- Home Section -->
     <section id="home" class="bg-light-gray">
-        <div class="container">
+
+        <div class="container"> 
+            <div class="row home-background">
+                <!-- <img src="http://i.imgur.com/3ZeUmKs.png" class="img-responsive" alt=""> -->
+            </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">First World War</h2>
                     <h3 class="section-subheading text-muted">看懂<strong>一戰</strong><br>就是這麼簡單</h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row core-objs">
                 <div class="col-sm-offset-2 col-sm-4">
                     <div class="core-obj">
                         <a href = "celebrity.html">
-                        <img src="http://i.imgur.com/8xIkIUf.png" class="img-responsive img-circle" alt="">
+                        <img src="http://i.imgur.com/QoCwRMs.png" class="img-responsive img-circle" alt="">
                         </a>
                         <h4>從時間軸看一戰</h4>
                         <p class="text-muted text-uppercase">Timeline</p>
                     </div>
                 </div>
-                <div class=" col-sm-4">
+                <div class="col-sm-4">
                     <div class="core-obj">
                         <a href = "timeline.html">
-                        <img src="http://i.imgur.com/I8aeH9m.png" class="img-responsive img-circle" alt="">
+                            <div class="celebrity-hover">
+                            </div>
+                        <img src="http://i.imgur.com/JB9NO7G.png" class="img-responsive img-circle" alt="">
                         </a>
                         <h4>從歷史人物看一戰</h4>
                         <p class="text-muted text-uppercase">Historical Person</p>
